# shiibar-cc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.claude-plugin/: marketplace.json
.github/workflows/: bump-cask.yml  ci.yml  release.yml
app/: Package.swift  ShiibarCCApp.entitlements
app/Sources/ConversationsWebPaneKit/: FindBarControls.swift  PageTemplate.swift  WebPane.swift
app/Sources/ShiibarCCApp/: AppState.swift  CLIRunner.swift  DaemonConnection.swift  DaemonLifecycleManager.swift  DropdownView.swift  NotificationManager.swift  ShiibarCCAppApp.swift  TrayIconRenderer.swift  TrayIconView.swift  WindowGlyphView.swift
app/Sources/ShiibarCCCore/: Grouping.swift  HelperPaths.swift  NotificationLogic.swift  Rollup.swift  StateDirectory.swift
app/Sources/ShiibarCcApp/: AgentListView.swift  AgentsWindowView.swift  AppMenu.swift  AppState.swift  CLIRunner.swift  ConversationsContentView.swift  ConversationsRunner.swift  ConversationsSearchField.swift  ConversationsTextSizeStore.swift  (+14 more)
crates/shiibar-cc/: Cargo.toml
crates/shiibar-cc-client/: Cargo.toml
crates/shiibar-cc-client/src/: apple_terminal.rs  connection.rs  iterm.rs  iterm2.rs  label.rs  lib.rs  reconcile.rs  selector.rs  terminal.rs  wait.rs
crates/shiibar-cc-client/tests/: wait_integration.rs
crates/shiibar-cc-client/tests/support/: mod.rs
crates/shiibar-cc-proto/: Cargo.toml
crates/shiibar-cc/src/: conversations.rs  conversations_cmd.rs  doctor_cmd.rs  exitcode.rs  focus_cmd.rs  lib.rs  list_cmd.rs  main.rs  reconcile_cmd.rs  remove_cmd.rs  report_cmd.rs  resume_cmd.rs  seen_cmd.rs  wait_cmd.rs  watch_cmd.rs
crates/shiibar-cc/src/conversations/: db.rs  live.rs  lock.rs  mod.rs  transcript.rs
crates/shiibar-cc/tests/: conversations.rs  exit_codes.rs  report_cli.rs
crates/shiibar-cc/tests/support/: mod.rs
crates/shiibar-ccd/: Cargo.toml
crates/shiibar-ccd/src/: clock.rs  core.rs  lib.rs  logging.rs  main.rs  paths.rs  server.rs  sessions.rs  state.rs  transitions.rs
crates/shiibar-ccd/tests/: fixtures_replay.rs  manual_remove.rs  reconcile.rs  restart_persistence.rs  stale_sweep.rs  startup_sequence.rs  task_notification.rs  transitions_table.rs
crates/shiibar-ccd/tests/support/: mod.rs
crates/shiibar-client/: Cargo.toml
crates/shiibar-client/src/: connection.rs  iterm.rs  label.rs  lib.rs  selector.rs  wait.rs
crates/shiibar-client/tests/: wait_integration.rs
crates/shiibar-client/tests/support/: mod.rs
crates/shiibar-proto/: Cargo.toml
crates/shiibarctl/: Cargo.toml
crates/shiibard/: Cargo.toml
crates/shiibard/src/: clock.rs  core.rs  logging.rs  main.rs  paths.rs  server.rs  sessions.rs  state.rs  transitions.rs
crates/shiibard/tests/: fixtures_replay.rs  restart_persistence.rs  stale_sweep.rs  transitions_table.rs
crates/shiibard/tests/support/: mod.rs
docs/: DESIGN.md  DEVELOPMENT.md  conversations-design.html  menubar-design.html
docs/tasks/: M1.md  M10.md  M11.md  M12.md  M13.md  M14.md  M15.md  M16.md  M17.md  M18.md  M19.md  M1M2-respec.md  M2.md  M20.md  M21.md  M22.md  M23.md  M24.md  M25.md  M26.md  M27.md  M28.md  M29.md  M3.md  M30.md  M31.md  M32.md  M33.md  M34.md  M35.md  M36.md  M37.md  M38.md  M39.md  M4.md  M40.md  M41.md  M42.md  M5.md  M6.md  (+3 more)
fixtures/: README.md  notification_auth_success.json  notification_elicitation_dialog.json  notification_elicitation_response_accept.json  notification_elicitation_response_cancel.json  notification_idle_prompt.json  notification_permission_prompt.json  post_tool_use.json  post_tool_use_failure.json  session_end.json  session_end_clear.json  session_end_prompt_input_exit.json  session_start_apple_terminal.json  session_start_clear.json  session_start_compact.json  session_start_startup.json  stop_apple_terminal.json  stop_no_background_tasks.json  stop_with_background_tasks.json  user_prompt_submit.json
hooks/: report.sh  settings-snippet.json
packaging/homebrew/: shiibar-cc.rb
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  report.sh
scripts/: dev-demo.sh  dev-install.sh  dev-reload.sh  dev-uninstall.sh  generate-app-icon.swift  install.sh  uninstall.sh
scripts/lib/: app-lifecycle.sh  bundle.sh  make-local-signing-identity.sh  signing.sh
scripts/release/: build-release-app.sh  check-version.sh  generate-release-notes.sh
(+109 files in other folders)
