[workspace]
resolver = "2"
members = [
    "crates/shiibar-cc-proto",
    "crates/shiibar-cc-client",
    "crates/shiibar-ccd",
    "crates/shiibar-cc",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
