[package]
name = "shiibar-cc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shiibar-cc-proto = { path = "../shiibar-cc-proto" }
shiibar-cc-client = { path = "../shiibar-cc-client" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
