[package]
name = "shiibar-cc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shiibar-cc-proto = { path = "../shiibar-cc-proto" }
shiibar-cc-client = { path = "../shiibar-cc-client" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
libc = { workspace = true }
# NFC normalization at the search-matching boundary (DESIGN.md
# 4.6 / 8.38(12)): the standard unicode-rs crate. Transitive additions on
# the supply-chain axis (section 10): tinyvec and tinyvec_macros.
unicode-normalization = "0.1.25"

[dev-dependencies]
tempfile = "3"
