[package]
name = "shiibar-ccd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shiibar-cc-proto = { path = "../shiibar-cc-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
