[package]
name = "shiibar-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shiibar-proto = { path = "../shiibar-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
shiibard = { path = "../shiibard" }
tokio = { workspace = true }
tempfile = "3"
