[package]
name = "shiibard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shiibar-proto = { path = "../shiibar-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
